alignment fixes

--- a/static/src/style.css
+++ b/static/src/style.css
@@ -874,7 +874,8 @@ justify-content: center;
 
 }
 .intro-main{
-
+padding: 0px 0px !important;
+flex-direction: column;
 width: 100%;
 background-color: white;
 display: flex;
@@ -1065,8 +1066,8 @@ line-height: 140%; /* 33.6px */
   justify-content: center 
   !important;
   align-items: center !important;
-  height: 100% !important;
   width: 100%;
+  height: 50vh;
 }
 
 .carousel-inner {
@@ -1075,7 +1076,7 @@ line-height: 140%; /* 33.6px */
 
 .main-box-container h2{
 
-
+transform: translateY(-50px);
   font-family: "Almarai";
 }
 
@@ -1867,7 +1868,6 @@ line-height: 160%;
 
     .icon-info{
       display: flex !important;
-      text-align: ;
       align-items: center!important;
       justify-content:end !important;
       gap: 20px;
